back-end-service.yml
apiVersion: v1
kind: Service
metadata:
  name: back-end-service
spec:
  ports:
  - name: http
    targetPort: 8080
    port: 80
  type: ClusterIP
  selector:
    app: back-end
