my-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-service
spec:
  rules:
    - host: my-service.10.0.2.15.xip.io
      http:
        paths:
          - path: /
            backend:
              serviceName: my-service
              servicePort: 8080
