my-service-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-service-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: my-service.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: my-service-service
          servicePort: http
